# Brain_tumor_mri_classification

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
.venv_hf/: pyvenv.cfg
app/: app_gradio.py  streamlit_app.py
artifacts/: calibrator.pkl
hf_space_sync/: .gitignore  README.md
hf_space_sync/app/: app_gradio.py
hf_space_sync/src/brain_tumor_mri/: __init__.py  utils.py
notebooks/: 01_brain_mri_exploration.ipynb  02_baseline_import_dataset.ipynb  03_baseline_training.ipynb  03_baseline_training_clean_split.ipynb  03_baseline_training_refactored.ipynb  04_resnet18_A_vs_B.ipynb  04_resnet18_A_vs_B_.ipynb  04_resnet18_A_vs_B__refactored.ipynb  04_tta_calibration_corrected.ipynb  05_test_modele_FR.ipynb  05_test_modele_FR_complete_refactored.ipynb  06_gradcam_smallcnn_projectmodule.ipynb  06_resnet18_Method_B_Advanced.ipynb  06_resnet18_Method_B_Advanced_refactored.ipynb  07_Final_Inference.ipynb  08_threshold_calibration.ipynb  08_tta__callibration.ipynb  08_tta_threshhold.ipynb  09_efficientnet_b0.ipynb  Notebook_finale_pre_deploiement.ipynb  exemple_collab_netbook_gpu.ipynb  notebook_final_mri.ipynb  notebook_finale.ipynb
notebooks/old/: 01_brain_mri_exploration.ipynb  05_test_calibrated_corrected.ipynb  06_gradcam_smallcnn_projectmodule.ipynb  06_resnet18_Method_B_Advanced.ipynb  07_Final_Inference_refactored.ipynb  08_efficientnet_final_checkpoint_notebook.ipynb  08_smallcnn_v2_training.ipynb  Notebook_finale_pre_deploiement.ipynb  brain_tumor_binaireV1.ipynb
scripts/: train.py
src/brain_tumor_mri/data/: loaders.py  (+1 more)
(+25 files in other folders)
